Connect end phase button

--- a/src-frontend/app/game/game.component.html
+++ b/src-frontend/app/game/game.component.html
@@ -21,7 +21,7 @@
           </dmn-card>
         </div>
       </div>
-      <button>End {{ game.phase }} Phase</button>
+      <button (click)="endPhase()">End {{ game.phase }} Phase</button>
     </div>
     <div id="piles">
 
