--- a/src-frontend/app/game/game.component.css
+++ b/src-frontend/app/game/game.component.css
@@ -137,4 +137,8 @@
       justify-content: center;
       align-items: center; }
 
+dmn-card {
+  display: inline-block;
+  margin: 0 4px; }
+
 /*# sourceMappingURL=game.component.css.map */
