Hide cart when not in use

--- a/src-frontend/app/game/game.component.css
+++ b/src-frontend/app/game/game.component.css
@@ -141,4 +141,7 @@ dmn-card {
   display: inline-block;
   margin: 0 4px; }
 
+.hidden {
+  visibility: hidden; }
+
 /*# sourceMappingURL=game.component.css.map */
