--- a/src-frontend/app/game/game.component.html
+++ b/src-frontend/app/game/game.component.html
@@ -28,6 +28,7 @@
       <div class="pile-row">
         <dmn-card [card]="card"
                   [disabled]="!game.canBuy(card)"
+                  [selectable]="game.toSelectBoard.indexOf(card.id) > 0"
                   *ngFor="let card of game.nonactionCards"
                   (click)="addToCart(card)"
         >
@@ -36,6 +37,7 @@
       <div class="pile-row">
         <dmn-card [card]="card"
                   [disabled]="!game.canBuy(card)"
+                  [selectable]="game.toSelectBoard.indexOf(card.id) > 0"
                   *ngFor="let card of game.actionCards.slice(0, 6)"
                   (click)="addToCart(card)"
         >
@@ -44,6 +46,7 @@
       <div class="pile-row">
         <dmn-card [card]="card"
                   [disabled]="!game.canBuy(card)"
+                  [selectable]="game.toSelectBoard.indexOf(card.id) > 0"
                   *ngFor="let card of game.actionCards.slice(6, 12)"
                   (click)="addToCart(card)"
         >
@@ -79,6 +82,7 @@
         <dmn-card *ngFor="let card of game.hand"
                   (click)="play(card)"
                   [disabled]="game.phase !== 'action' || (card.type !== 'action' && card.type !== 'reaction')"
+                  [selectable]="game.toSelectHand.indexOf(card.id) > 0"
                   [card]="card"
                   [@cardState]="card.state"></dmn-card>
       </div>
