I think it should now send a websocket message to create a game correctly now? lol let's find out

--- a/src-frontend/app/creation-page/creation-page.component.html
+++ b/src-frontend/app/creation-page/creation-page.component.html
@@ -78,7 +78,7 @@
         </div>
       </div>
       <div class="pane" id="blowUp">
-        <img id="blowUpImg" src="../../assets/card0.jpg" style="visibility: hidden;"/>
+        <img id="blowUpImg" src="../../assets/card/card0.jpg" style="visibility: hidden;"/>
       </div>
     </div>
   </form>
