--- a/src-frontend/app/creation-page/creation-page.component.html
+++ b/src-frontend/app/creation-page/creation-page.component.html
@@ -65,12 +65,12 @@
       <div class="pane" id="card-select-and-submit">
         <div class="card-row">
           <div *ngFor="let i of [0,1,2,3,4,5,6,7,8,9]" class="card">
-            <img id="card{{ i }}" class="cardImg" src="../../assets/card/card{{ i }}.jpg" (mouseenter)="entered('card' + i)" (mouseleave)="left()" (click)="clicked('card' + i)" />
+            <img id="card{{ i }}" class="cardImg" src="../../assets/card/card{{ i }}.jpg" (mouseenter)="entered(i)" (mouseleave)="left()" (click)="clicked(i)" />
           </div>
         </div>
         <div class="card-row">
           <div *ngFor="let j of [10,11,12,13,14,15,16,17,18,19]" class="card">
-            <img id="card{{ j }}" class="cardImg" src="../../assets/card/card{{ j }}.jpg" (mouseenter)="entered('card' + j)" (mouseleave)="left()" (click)="clicked('card' + j)" />
+            <img id="card{{ j }}" class="cardImg" src="../../assets/card/card{{ j }}.jpg" (mouseenter)="entered(j)" (mouseleave)="left()" (click)="clicked(j)" />
           </div>
         </div>
         <div class="wide-button-container">
