--- a/src-frontend/app/game/card/card.component.scss
+++ b/src-frontend/app/game/card/card.component.scss
@@ -25,6 +25,10 @@
     background: #afe0b1;
   }
 
+  &.selectable {
+    box-shadow: 0 0 10px rgba(249, 255, 85, 1), 0 0 10px rgba(249, 255, 85, 1)
+  }
+
 
   .image {
     height: 75px;
