Fix turn cycling display

--- a/src-frontend/app/game/game.component.html
+++ b/src-frontend/app/game/game.component.html
@@ -21,7 +21,8 @@
           </dmn-card>
         </div>
       </div>
-      <button [ngClass]="{hidden: game.isSelecting()}" (click)="endPhase()">End {{ game.phase }} Phase</button>
+      <button [ngClass]="{hidden: game.isSelecting() || game.isOwnTurn()}"
+              (click)="endPhase()">End {{ game.phase }} Phase</button>
     </div>
     <div id="piles">
 
@@ -56,7 +57,7 @@
     <div id="right-bar-container">
       <div id="right-bar">
         <div class="turns">
-          <div *ngFor="let player of game.players; let i = index;"
+          <div *ngFor="let player of game.orderedPlayers; let i = index;"
                class="turn" [ngClass]="{currentTurn: i === 0}">
             <div class="current-turn-message">Current Turn</div>
             <div class="turn-info">
