--- a/src-frontend/app/lobby/lobby.component.css
+++ b/src-frontend/app/lobby/lobby.component.css
@@ -196,6 +196,9 @@
   width: 100%;
   height: auto;
 }
+
 #game-info .card:hover {
-  cursor: pointer;
+   cursor: pointer;
+   transform: scale(5) translateY(-30px);
+   z-index: 21;
 }
