--- a/src-frontend/app/game/game.component.html
+++ b/src-frontend/app/game/game.component.html
@@ -62,7 +62,7 @@
             <div class="current-turn-message">Current Turn</div>
             <div class="turn-info">
               <div class="name">{{player.name}}</div>
-              <div class="num-cards">3 Cards</div>
+              <div class="num-cards">{{ player.numCards }} Cards, {{ player.victoryPoints }} VP</div>
             </div>
           </div>
           <div class="chat-container">
