--- a/src-frontend/app/game/card/card.component.scss
+++ b/src-frontend/app/game/card/card.component.scss
@@ -5,7 +5,7 @@
   box-shadow: 0 1px 2px rgba(black, 0.12), 0 1px 3px rgba(black, 0.24);
   //padding: 3px 3px 0px;
   //background: black;
-  overflow: hidden;
+  overflow: visible;
   position: relative;
   font-size: 0;
   background: rgba(white, 0.75);
@@ -161,3 +161,18 @@
 dmn-card {
   position: relative;
 }
+
+
+.badge {
+  z-index: 333;
+  background-color: green;
+  display: block;
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  right: -15px;
+  top: -15px;
+}
+
+
