--- a/src-frontend/app/game/game.component.html
+++ b/src-frontend/app/game/game.component.html
@@ -21,6 +21,8 @@
           </dmn-card>
         </div>
       </div>
+      <button [ngClass]="{hidden: !game.isSelecting() || !game.toSelectStoppable}"
+              (click)="endSelecting()">End Select</button>
       <button [ngClass]="{hidden: game.isSelecting() || !game.isOwnTurn()}"
               (click)="endPhase()">End {{ game.phase }} Phase</button>
     </div>
