--- a/src-frontend/app/game/card/card.component.scss
+++ b/src-frontend/app/game/card/card.component.scss
@@ -162,17 +162,23 @@ dmn-card {
   position: relative;
 }
 
-
 .badge {
-  z-index: 333;
-  background-color: green;
-  display: block;
+  z-index: 20;
   position: absolute;
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  right: -15px;
-  top: -15px;
+  right: -10px;
+  top: -10px;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  background: rgba(#444, 0.9);
+  font-weight: 100;
+  border: 1px solid #DDD;
+
 }
 
 
