--- a/src-frontend/app/game/game.component.html
+++ b/src-frontend/app/game/game.component.html
@@ -30,7 +30,7 @@
 
       <div class="pile-row">
         <dmn-card [card]="card"
-                  [disabled]="!game.canBuy(card) && !game.isSelectable(card, false)"
+                  [disabled]="card.pileCount == 0 || !game.canBuy(card) && !game.isSelectable(card, false)"
                   [selectable]="game.isSelectable(card, false)"
                   *ngFor="let card of game.nonactionCards"
                   (click)="cardClickedPile(card)"
@@ -39,7 +39,7 @@
       </div>
       <div class="pile-row">
         <dmn-card [card]="card"
-                  [disabled]="!game.canBuy(card) && !game.isSelectable(card, false)"
+                  [disabled]="card.pileCount == 0 || !game.canBuy(card) && !game.isSelectable(card, false)"
                   [selectable]="game.isSelectable(card, false)"
                   *ngFor="let card of game.actionCards.slice(0, 6)"
                   (click)="cardClickedPile(card)"
@@ -48,7 +48,7 @@
       </div>
       <div class="pile-row">
         <dmn-card [card]="card"
-                  [disabled]="!game.canBuy(card) && !game.isSelectable(card, false)"
+                  [disabled]="card.pileCount == 0 || !game.canBuy(card) && !game.isSelectable(card, false)"
                   [selectable]="game.isSelectable(card, false)"
                   *ngFor="let card of game.actionCards.slice(6, 12)"
                   (click)="cardClickedPile(card)"
