Refactor chat socket source

--- a/src-frontend/app/game/game.component.html
+++ b/src-frontend/app/game/game.component.html
@@ -68,7 +68,7 @@
             </div>
           </div>
           <div class="chat-container">
-            <dmn-chat [endpoint]="'game'"></dmn-chat>
+            <dmn-chat [endpoint]="'game'" [socket]="_gameSocketService"></dmn-chat>
           </div>
         </div>
       </div>
