--- a/src-frontend/app/lobby/lobby.component.html
+++ b/src-frontend/app/lobby/lobby.component.html
@@ -29,7 +29,7 @@
   <div class="pane-row">
     <div class="pane" id="chat">
       <div class="pane-content">
-        <dmn-chat></dmn-chat>
+        <dmn-chat [socket]="_chatSocketService"></dmn-chat>
       </div>
     </div>
     <div class="pane" id="game-info">
