--- a/src-frontend/app/creation-page/creation-page.component.html
+++ b/src-frontend/app/creation-page/creation-page.component.html
@@ -26,7 +26,7 @@
       </div>
       <div class="pane" id="chat">
         <div class="pane-content">
-          <dmn-chat></dmn-chat>
+          <dmn-chat [socket]="_chatSocketService"></dmn-chat>
         </div>
       </div>
       <div class="pane" id="presets">
@@ -36,7 +36,7 @@
             <tr>
               <td>
                 <div class="button-container">
-                  <button>Basic</button>
+                  <button (click)="basic()">Basic</button>
                 </div>
               </td>
               <td>
