working on presets

--- a/src-frontend/app/creation-page/creation-page.component.html
+++ b/src-frontend/app/creation-page/creation-page.component.html
@@ -36,24 +36,24 @@
             <tr>
               <td>
                 <div class="button-container">
-                  <button (click)="basic()">Basic</button>
+                  <button (click)="basic()">First Game</button>
                 </div>
               </td>
               <td>
                 <div class="button-container">
-                  <button>Big Money</button>
+                  <button (click)="money()">Big Money</button>
                 </div>
               </td>
             </tr>
             <tr>
               <td>
                 <div class="button-container">
-                  <button>Random</button>
+                  <button (click)="randomSelect()">Random</button>
                 </div>
               </td>
               <td>
                 <div class="button-container">
-                  <button>Sabotage</button>
+                  <button (click)="trash()">Trash Heap</button>
                 </div>
               </td>
             </tr>
