working on presets some more

--- a/src-frontend/app/creation-page/creation-page.component.html
+++ b/src-frontend/app/creation-page/creation-page.component.html
@@ -64,12 +64,12 @@
     <div id="cards-row">
       <div class="pane" id="card-select-and-submit">
         <div class="card-row">
-          <div *ngFor="let i of [0,1,2,3,4,5,6,7,8,9]" class="card">
+          <div *ngFor="let i of [7, 8, 9, 10, 11, 12, 13, 14, 15, 16]" class="card">
             <img id="card{{ i }}" class="cardImg" src="../../assets/card/card{{ i }}.jpg" (mouseenter)="entered(i)" (mouseleave)="left()" (click)="clicked(i)" />
           </div>
         </div>
         <div class="card-row">
-          <div *ngFor="let j of [10,11,12,13,14,15,16,17,18,19]" class="card">
+          <div *ngFor="let j of [17, 18, 19, 20, 21, 22, 23, 24, 25, 26]" class="card">
             <img id="card{{ j }}" class="cardImg" src="../../assets/card/card{{ j }}.jpg" (mouseenter)="entered(j)" (mouseleave)="left()" (click)="clicked(j)" />
           </div>
         </div>
