--- a/src-frontend/app/lobby/lobby.component.html
+++ b/src-frontend/app/lobby/lobby.component.html
@@ -4,7 +4,7 @@
     <div class="pane" id="game-listing">
       <div class="pane-content">
         <div class="header">
-          <input type="text"/>
+          <input type="text" placeholder="Search for a game..." />
           <div class="button-container">
             <a routerLink="/create"><button>Create Game</button></a>
           </div>
