--- a/src-frontend/app/creation-page/creation-page.component.css
+++ b/src-frontend/app/creation-page/creation-page.component.css
@@ -146,7 +146,7 @@ form {
 }
 
 .card {
-  width: 10%;
+  width: 9%;
   height: auto;
   display: inline-block;
   padding-left: 5px;
@@ -180,4 +180,5 @@ form {
 
 button:focus {
   border: none;
+  /*alskjl*/
 }
