--- a/src-frontend/app/game/game.component.html
+++ b/src-frontend/app/game/game.component.html
@@ -95,6 +95,7 @@
     <div class="left">
       <div class="discard">
         <dmn-card [count]="game.discardsize"></dmn-card>
+        <div class="label">Discard</div>
       </div>
     </div>
     <div class="hand-container">
@@ -109,6 +110,7 @@
     </div>
     <div class="deck">
       <dmn-card [count]="game.decksize"></dmn-card>
+      <div class="label">Deck</div>
     </div>
   </div>
 </div>
