--- a/src-frontend/styles.css
+++ b/src-frontend/styles.css
@@ -6,6 +6,7 @@ html, body {
   margin: 0;
   padding: 0;
   height: 100%;
+  min-width: 1000px;
   color: #333;
   font-family: 'Roboto', Helvetica, Arial, sans-serif;
 }
