Add leaving game and fix chat height

--- a/src-frontend/app/game/game.component.scss
+++ b/src-frontend/app/game/game.component.scss
@@ -160,9 +160,39 @@
     #right-bar-container {
       width: 320px;
       padding: 12px;
+      display: flex;
+      flex-direction: column;
+
+      .exit-row {
+        display: flex;
+        justify-content: flex-end;
+        color: white;
+        align-items: center;
+        padding: 8px;
+        font-weight: 100;
+        text-transform: uppercase;
+        font-size: 13px;
+
+        &:hover {
+          cursor: pointer;
+
+          span {
+            text-decoration: underline;
+          }
+        }
+
+        i {
+          color: white;
+          padding: 0 12px;
+        }
+      }
 
       #right-bar {
         box-shadow: 0 1px 2px rgba(black, 0.12), 0 1px 3px rgba(black, 0.24);
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+
 
         .turns {
           display: flex;
@@ -215,6 +245,9 @@
           font-size: 0.8em;
           color: white;
           height: 330px;
+          flex-grow: 1;
+          display: flex;
+          justify-content: stretch;
 
           .message {
             padding: 0 !important;
@@ -278,6 +311,10 @@ dmn-card {
   margin: 0 4px;
 }
 
+
+dmn-chat {
+  width: 100%;
+}
 
 .hidden{
   visibility: hidden;
