--- a/src-frontend/app/chat/chat.component.html
+++ b/src-frontend/app/chat/chat.component.html
@@ -2,12 +2,12 @@
     <div class="messages">
       <div class="message-container" id="chat-messages">
         <div class="message" *ngFor="let message of chatModel.messages; let i = index; let l = last" id="message{{ i }}">
-          <div class="name" [style.color]="message.color">
-            {{ message.name }}
-          </div>
-          <div class="message-content">
+          <span class="name" [style.color]="message.color">
+            {{ message.name }}:
+          </span>
+          <span class="message-content">
             {{ message.message }}
-          </div>
+          </span>
           {{ l ? updateScroll() : null }}
         </div>
       </div>
