--- a/src-frontend/app/game/game.component.css
+++ b/src-frontend/app/game/game.component.css
@@ -110,9 +110,30 @@
           font-size: 0; }
     #game #board #right-bar-container {
       width: 320px;
-      padding: 12px; }
+      padding: 12px;
+      display: flex;
+      flex-direction: column; }
+      #game #board #right-bar-container .exit-row {
+        display: flex;
+        justify-content: flex-end;
+        color: white;
+        align-items: center;
+        padding: 8px;
+        font-weight: 100;
+        text-transform: uppercase;
+        font-size: 13px; }
+        #game #board #right-bar-container .exit-row:hover {
+          cursor: pointer; }
+          #game #board #right-bar-container .exit-row:hover span {
+            text-decoration: underline; }
+        #game #board #right-bar-container .exit-row i {
+          color: white;
+          padding: 0 12px; }
       #game #board #right-bar-container #right-bar {
-        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24); }
+        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24);
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column; }
         #game #board #right-bar-container #right-bar .turns {
           display: flex;
           flex-direction: column; }
@@ -145,7 +166,10 @@
           background: rgba(0, 0, 0, 0.5);
           font-size: 0.8em;
           color: white;
-          height: 330px; }
+          height: 330px;
+          flex-grow: 1;
+          display: flex;
+          justify-content: stretch; }
           #game #board #right-bar-container #right-bar .chat-container .message {
             padding: 0 !important; }
   #game #hud {
@@ -183,6 +207,9 @@
 dmn-card {
   display: inline-block;
   margin: 0 4px; }
+
+dmn-chat {
+  width: 100%; }
 
 .hidden {
   visibility: hidden; }
