--- a/src-frontend/app/game/game.component.css
+++ b/src-frontend/app/game/game.component.css
@@ -52,19 +52,28 @@
       display: flex;
       flex-direction: column; }
       #game #board #left-bar #stats {
-        padding: 20px 80px 20px 20px;
+        padding: 20px 0px 20px 20px;
         font-size: 18px;
-        font-weight: 300;
+        font-weight: 100;
         color: white; }
         #game #board #left-bar #stats .stat {
           display: flex;
-          align-items: center;
-          justify-content: space-between;
-          margin-bottom: 12px; }
+          margin-bottom: 12px;
+          justify-content: flex-start;
+          font-weight: 300;
+          min-height: 30px;
+          align-items: flex-start; }
           #game #board #left-bar #stats .stat .stat-label {
             font-weight: bold;
+            min-width: 70px;
             text-transform: uppercase;
-            font-size: 0.8em; }
+            padding-right: 8px;
+            font-size: 0.7em;
+            display: inline-block; }
+          #game #board #left-bar #stats .stat .icons {
+            display: inline-block; }
+            #game #board #left-bar #stats .stat .icons i {
+              font-size: 20px; }
       #game #board #left-bar #cart {
         background: rgba(0, 0, 0, 0.5);
         flex-grow: 1;
